[package]
authors = ["Pendulum"]
edition = "2021"
name = "vault-registry"
version = "1.0.13"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"]}
scale-info = { workspace = true, features = ["derive"]}
serde = { workspace = true, features = ["derive"], optional = true}

log = { workspace = true }

visibility = { workspace = true, optional = true}

# Substrate dependencies
sp-core = { workspace = true}
sp-std = { workspace = true}

frame-benchmarking = { workspace = true, optional = true}
frame-support = { workspace = true}
frame-system = { workspace = true}

# Parachain dependencies
currency = {path = "../currency", default-features = false}
fee = {path = "../fee", default-features = false}
oracle = {path = "../oracle", default-features = false}
primitives = {package = "spacewalk-primitives", path = "../../primitives", default-features = false}
security = {path = "../security", default-features = false}
staking = {path = "../staking", default-features = false}
reward-distribution = {path = "../reward-distribution", default-features = false}

pooled-rewards = { path = "../pooled-rewards", default-features = false }

# Orml dependencies
orml-tokens = { workspace = true}
orml-traits = { workspace = true, optional = true}

[dev-dependencies]
mocktopus.workspace = true
currency = {path = "../currency", features = ["testing-utils", "testing-constants"]}
security = { path = "../security", features = ['testing-utils'] }
frame-benchmarking = { workspace = true, default-features = true}
pallet-balances = { workspace = true, default-features = true}
pallet-timestamp = { workspace = true, default-features = true}
sp-arithmetic = { workspace = true, default-features = true}
sp-io = { workspace = true, default-features = true}
oracle = { path = "../oracle", features = ['testing-utils'] }
pretty_assertions.workspace = true

orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }

[features]
default = ["std"]
integration-tests = [
  "visibility",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "currency/runtime-benchmarks",
  "currency/testing-constants",
  "security/testing-utils",
  "oracle/testing-utils",
  "orml-traits"
]
skip-slow-tests = []
std = [
  "serde",
  "codec/std",
  "sp-std/std",
  "sp-core/std",
  "frame-support/std",
  "frame-system/std",
  "pooled-rewards/std",
  "orml-tokens/std",
  "oracle/std",
  "fee/std",
  "security/std",
  "currency/std",
  "staking/std",
  "primitives/std",
]


try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-timestamp/try-runtime",
  "pooled-rewards/try-runtime",
  "orml-currencies/try-runtime",
  "orml-tokens/try-runtime",
  "oracle/try-runtime",
  "fee/try-runtime",
  "security/try-runtime",
  "currency/try-runtime",
  "staking/try-runtime",
]
