[package]
authors = ["Pendulum"]
edition = "2021"
name = "vault-registry"
version = "1.0.13"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"]}
scale-info = { workspace = true, features = ["derive"]}
serde = { workspace = true, features = ["derive"], optional = true}

log = { workspace = true }

visibility = { workspace = true, optional = true}

# Substrate dependencies
sp-core = { workspace = true}
sp-std = { workspace = true}

frame-benchmarking = { workspace = true, optional = true}
frame-support = { workspace = true}
frame-system = { workspace = true}

# Parachain dependencies
currency = {path = "../currency", default-features = false}
fee = {path = "../fee", default-features = false}
oracle = {path = "../oracle", default-features = false}
primitives = {package = "spacewalk-primitives", path = "../../primitives", default-features = false}
security = {path = "../security", default-features = false}
staking = {path = "../staking", default-features = false}
reward-distribution = {path = "../reward-distribution", default-features = false}

pooled-rewards = { path = "../pooled-rewards", default-features = false }

# Orml dependencies
orml-tokens = { workspace = true}
orml-traits = { workspace = true, optional = true}

[dev-dependencies]
mocktopus.workspace = true
currency = {path = "../currency", features = ["testing-utils", "testing-constants"]}
security = { path = "../security", features = ['testing-utils'] }
frame-benchmarking = { workspace = true, default-features = true}
pallet-balances = { workspace = true, default-features = true}
pallet-timestamp = { workspace = true, default-features = true}
sp-arithmetic = { workspace = true, default-features = true}
sp-io = { workspace = true, default-features = true}
oracle = { path = "../oracle", features = ['testing-utils'] }
pretty_assertions.workspace = true

orml-currencies = { workspace = true, default-features = true }

[features]
default = [ "std" ]
integration-tests = [ "visibility" ]
runtime-benchmarks = [
	"currency/runtime-benchmarks",
	"currency/testing-constants",
	"fee/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"oracle/runtime-benchmarks",
	"oracle/testing-utils",
	"orml-tokens/runtime-benchmarks",
	"orml-traits",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pooled-rewards/runtime-benchmarks",
	"reward-distribution/runtime-benchmarks",
	"security/testing-utils",
	"staking/runtime-benchmarks",
]
skip-slow-tests = []
std = [
	"codec/std",
	"currency/std",
	"fee/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"oracle/std",
	"orml-tokens/std",
	"orml-traits?/std",
	"pooled-rewards/std",
	"primitives/std",
	"reward-distribution/std",
	"scale-info/std",
	"security/std",
	"serde",
	"serde?/std",
	"sp-core/std",
	"sp-std/std",
	"staking/std",
]


try-runtime = [
	"currency/try-runtime",
	"fee/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"oracle/try-runtime",
	"orml-currencies/try-runtime",
	"orml-tokens/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-timestamp/try-runtime",
	"pooled-rewards/try-runtime",
	"reward-distribution/try-runtime",
	"security/try-runtime",
	"staking/try-runtime",
]
